--- a/data/raw/.gitignore
+++ b/data/raw/.gitignore
@@ -6,7 +6,6 @@
 *.RData
 *.Rdata
 
-
 # Example code in package build process
 *-Ex.R
 
@@ -37,3 +36,9 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .Rproj.user
+
+*.zip
+*.tiff
+/ai_et0/
+/official/
+/wc0.5/
